# kjar

./: .flatpak-manifest.json  .gitignore  CMakeLists.txt  README.md  REUSE.toml  org.kde.kjar.desktop  org.kde.kjar.metainfo.xml  resources.qrc
src/: kjarapp.cpp  kjarapp.h  main.cpp  resources.qrc
src/qml/: ErrorDialog.qml  main.qml
src/watcher/: ErrorDialog.qml  kjar_watcher.cpp  watcher.qrc
